--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,6 +1,8 @@
 $dark: #000000;
 $grey: lighten($dark, 73%);
-$dark-grey: lighten($dark, 43%);;
+$dark-grey: lighten($dark, 43%);
+$light-grey: lighten($dark, 93%);
+
 $tiffany: #63d1bb;
 $text-grey: #444444;
 $dark: #000000;
