--- a/sass/blocks/page-main.scss
+++ b/sass/blocks/page-main.scss
@@ -1,3 +1,18 @@
-.page-main__title {
+.page-main__main-title {
   @include title;
+  &--catalog {
+    padding-top: 73px;
+    padding-bottom: 78px;
+    margin-bottom: 30px;
+  }
+}
+
+.page-main__title {
+  @include clear;
+
+  font-size: 25px;
+  line-height: 30px;
+  font-weight: 700;
+
+  color: $dark;
 }
