--- a/sass/global/fonts.scss
+++ b/sass/global/fonts.scss
@@ -1,21 +1,15 @@
 @font-face {
-  font-family: "Open Sans";
-  font-style: normal;
   font-weight: 400;
-  src:
-    local("Open Sans"),
-    local("OpenSans"),
-    url("../../fonts/opensans.woff2") format("woff2"),
-    url("../../fonts/opensans.woff") format("woff");
+  font-family: "Open Sans";
+
+  src: url("../fonts/opensans.woff") format("woff"),
+    url("../fonts/opensans.woff2") format("woff2");
 }
 
 @font-face {
-  font-family: "Open Sans Bold";
-  font-style: normal;
   font-weight: 700;
-  src:
-    local("Open Sans Bold"),
-    local("OpenSans-Bold"),
-    url("../../fonts/opensansbold.woff2") format("woff2"),
-    url("../../fonts/opensansbold.woff") format("woff");
+  font-family: "Open Sans Bold";
+
+  src: url("../fonts/opensansbold.woff") format("woff"),
+    url("../fonts/opensansbold.woff2") format("woff2");
 }
