--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,15 @@
 @import "variables.scss";
 @import "global/fonts.scss";
 @import "global/visually-hidden.scss";
+@import "global/global.scss";
 @import "blocks/page-header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/page-main.scss";
 @import "blocks/products.scss";
+@import "blocks/features.scss";
+@import "blocks/reviews.scss";
+@import "blocks/contacts.scss";
+@import "blocks/map.scss";
+@import "blocks/page-footer.scss";
+@import "blocks/catalog.scss";
+@import "blocks/video.scss";
