--- a/sass/blocks/page-main.scss
+++ b/sass/blocks/page-main.scss
@@ -5,6 +5,11 @@
     padding-bottom: 78px;
     margin-bottom: 30px;
   }
+  &--form{
+    padding-top: 73px;
+    padding-bottom: 75px;
+    margin-bottom: 25px;
+  }
 }
 
 .page-main__title {
