--- a/sass/blocks/products.scss
+++ b/sass/blocks/products.scss
@@ -1,11 +1,17 @@
 .products-type__header {
   margin-bottom: 32px;
+  width: 320px;
+  height: 373px;
 
   background-image: url("../img/hero-mobile@1x.jpg");
   background-position: 0 0;
   background-repeat: no-repeat;
 }
-
+@media (min-width: $tablet-width) {
+  .products-type__header {
+    height: 746px;
+  }
+}
 .products-type__list {
   @include clear;
 }
