--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,3 +15,5 @@
 @import "blocks/page-footer.scss";
 @import "blocks/catalog.scss";
 @import "blocks/video.scss";
+@import "blocks/order.scss";
+@import "blocks/modal.scss";
