--- a/sass/blocks/page-footer.scss
+++ b/sass/blocks/page-footer.scss
@@ -1,5 +1,5 @@
 .page-footer__wrapper {
-  @include container;
+  // @include container;
   background-color: lighten($dark, 95%);
 }
 .page-footer__social {
