--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -1,9 +1,10 @@
 .modal-order {
-  @include container;
+  // @include container;
   width: 318px;
   padding-top: 35px;
   padding-bottom: 46px;
-  margin-left: 10px;
+  margin: 0 auto;
+  // margin-left: 10px;
   border: 1px solid rgb(199, 199, 199);
   box-shadow: 0 6px 4px -4px rgba(0, 0, 0, 0.2);
 }
